--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-blog-encrypt": "1.1.*",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-searchdb": "^1.0.8",
+    "hexo-generator-summary": "^1.1.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "hexo-blog-encrypt": "1.1.*"
+    "hexo-summarizer": "git://github.com/vfasky/hexo-summarizer.git"
   }
 }
