--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
-    "hexo-blog-encrypt": "1.1.*",
+    "hexo-blog-encrypt": "^2.0.7",
     "hexo-deployer-git": "^0.3.1",
+    "hexo-fs": "^0.2.3",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
