--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.3.9"
+    "version": "3.7.1"
   },
   "dependencies": {
     "hexo": "^3.2.0",
-    "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
-    "hexo-blog-encrypt": "^2.0.7",
-    "hexo-deployer-git": "^0.3.1",
-    "hexo-fs": "^0.2.3",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
@@ -18,11 +14,10 @@
     "hexo-generator-summary": "^1.1.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-inject": "^1.0.0",
-    "hexo-math": "^3.0.4",
     "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "hexo-summarizer": "git://github.com/vfasky/hexo-summarizer.git"
+    "undefined": "^undefined"
   }
 }
